here we go again

--- a/_config.yml
+++ b/_config.yml
@@ -49,8 +49,8 @@ author:
 
 
 #theme settings
-# remote_theme: "mmistakes/minimal-mistakes@4.26.2"
-theme: "minimal-mistakes-jekyll"
+remote_theme: "mmistakes/minimal-mistakes@4.26.2"
+# theme: "minimal-mistakes-jekyll"
 minimal_mistakes_skin: "dark"
 
 sidebar:
