--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Haris' Weekly Bit and Byte
 email: muhammadharis571@gmail.com
-permalink: /blog/:title
+permalink: /:title
 description: >- # this means to ignore newlines until "baseurl:"
   This is my personal journey towards achieving great things in my computing adventure, I'll be sharing stories of my life,
   and personal experiences by learning more about computing and the computer science world as well as my day to day struggles
